[Translations] Updated translations from Crowdin

--- a/Resources/translations/validators.sk.yml
+++ b/Resources/translations/validators.sk.yml
@@ -1,3 +1,16 @@
 # This file is part of the Sylius package.
 # (c) Paweł Jędrzejewski
 
+sylius:
+  tax_category:
+    name:
+      not_blank: Zadajte názov daňovej kategórie.
+  tax_rate:
+    category:
+      not_blank: Prosím vyberte daňovú kategóriu.
+    name:
+      not_blank: Zadajte názov sadzby dane.
+    amount:
+      not_blank: Zadajte čiastku sadzby dane.
+    calculator:
+      not_blank: Vyberte spôsob výpočtu daňe.
