--- a/Resources/translations/validators.en.yml
+++ b/Resources/translations/validators.en.yml
@@ -4,6 +4,7 @@ sylius:
             not_blank: Please enter tax category name.
         code:
             not_blank: Please enter tax category code.
+            regex: Tax category code can only be comprised of letters, numbers, dashes and underscores.
             unique: The tax category with given code already exists.
     tax_rate:
         category:
@@ -18,4 +19,5 @@ sylius:
             not_blank: Please select tax zone.
         code:
             not_blank: Please enter tax rate code.
+            regex: Tax rate code can only be comprised of letters, numbers, dashes and underscores.
             unique: The tax rate with given code already exists.
